# dtr2epf

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
src/: app.rs  generator.rs  main.rs  model.rs  templates.rs  test_support.rs
templates/: function.bsl.tpl  module.bsl.tpl  settings.json  subscription_from_platform.bsl.tpl  subscription_to_platform.bsl.tpl
templates/syntax_control/: subscription_to_platform.bsl.tpl
tests/fixtures/datareon_sample/Adapters/: [DatareonPlatformSystem] AdapterA.json  [DatareonPlatformSystem] AdapterB.json  [DatareonPlatformSystem] AdapterC.json  [DatareonPlatformSystem] AdapterD.json  [DatareonPlatformSystem] MDM.json  [VirtualFolder] Adapters.json
tests/fixtures/datareon_sample/Metadata/: [VirtualFolder] Metadata.json
tests/fixtures/datareon_sample/Metadata/Handlers/: [VirtualFolder] Handlers.json
tests/fixtures/datareon_sample/Metadata/Handlers/Mdm/: [Folder] Mdm.json
tests/fixtures/datareon_sample/Metadata/Handlers/Mdm/Входящие/: [Folder] Входящие.json  [Handler] AmberPeak_AdapterB_in.json  [Handler] AmberStar_AdapterB_in.json  [Handler] AmberStone_AdapterC_in.json  [Handler] ArcticBrook_AdapterC_in.json  [Handler] ArcticDelta_AdapterB_in.json  [Handler] AzureBrook_AdapterC_in.json  [Handler] AzureComet_AdapterB_in.json  [Handler] BrightHarbor_AdapterA_in.json  [Handler] BrightRiver_AdapterC_in.json  [Handler] CalmBeacon_AdapterB_in.json  [Handler] CalmCanyon_AdapterA_in.json  [Handler] CalmHarbor_AdapterB_in.json  [Handler] CalmWing_AdapterB_in.json  (+56 more)
(+40 files in other folders)
