[package]
name = "dtr2epf"
version = "0.1.0"
edition = "2024"
description = "GUI generator of 1C external processing modules from Datareon Platform sources"
license = "MIT OR Apache-2.0"

[dependencies]
egui = { version = "0.34", features = ["default_fonts"] }
egui_software_backend = "0.0.3"
egui-winit = { version = "0.34", default-features = false, features = ["clipboard"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
